--- a/Calculadora - Grupo (Coffee Sense)/index.html
+++ b/Calculadora - Grupo (Coffee Sense)/index.html
@@ -10,14 +10,14 @@
 
 <body>
     <div class="banner">
-        <img class="bg" src="file:///C:/Users/VICTOR/Downloads/COFFEE%20SENSE.jpg">
+        <img class="bg" src="/COFFEE SENSE.jpg">
         <div class="container">
             <div class="formulario">
                 <h2 class="titulo">Simule Aqui!</h2>
-                Área da plantação (em ha): <input type="number" id="input_areaTotal"><br>
+                Área da plantação (em hectare): <input type="number" id="input_areaTotal"><br>
                 Quantidade de sacas esperadas na última safra: <input type="number" id="input_sacasEsperadas"><br>
                 Quantidade de sacas colhidas na última safra: <input type="number" id="input_sacasUltimaSafra"><br>
-                Preço médio da saca vendida (R$): <input type="number" id="input_precoSaca"><br>
+                Preço médio da saca vendida (R$): <input type="number" id="input_precoSaca"><br>  
 
                 <div class="botoes">
                     <button class="botao" onclick="verPerdas()">Perda</button>
@@ -60,7 +60,7 @@
         var porcentagemRendimento = rendimentoEsperado / rendimentoReal
 
         exibir.innerHTML =
-            `<br>Com um rendimento esperado de ${rendimentoEsperado} sacas/ha e um rendimento real de ${rendimentoReal} sacas/ha, 
+            `<br>Com um rendimento esperado de ${rendimentoEsperado.toFixed(2)} sacas/ha e um rendimento real de ${rendimentoReal.toFixed(2)} sacas/ha, 
          perde-se ${porcentagemRendimento.toFixed(1)}% do rendimento da plantação.<br>
          Nas próximas 10 sacas, o prejuízo do seu rendimento será de ${10 * porcentagemRendimento.toFixed(1)}%.`
     }
